--- a/src/main/webapp/pages/Register/Register.html
+++ b/src/main/webapp/pages/Register/Register.html
@@ -2,7 +2,7 @@
     <wm-mobile-navbar name="mobile_navbar1" title="Sign Up"></wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-liveform errormessage="" title="Details" iconclass="wi wi-edit" formlayout="page" defaultmode="Edit" dataset="bind:Variables.VCADB_usersUsersData.dataSet" captionalign="left" captionposition="top" name="UsersLiveForm1" on-success="Actions.goToPage_Main.invoke();Variables.sendMail_successfulRegistration.invoke()"
+            <wm-liveform errormessage="" title="Details" iconclass="wi wi-edit" formlayout="page" defaultmode="Edit" dataset="bind:Variables.VCADB_usersUsersData.dataSet" captionalign="left" captionposition="top" name="UsersLiveForm1" on-success="Actions.goToPage_Main.invoke()"
                 on-result="Variables.add_newuser_events_var.invoke()" on-beforeservicecall="UsersLiveForm1Beforeservicecall($event, $operation, $data, options)">
                 <wm-layoutgrid columns="1" name="layoutgrid1">
                     <wm-gridrow name="gridrow1">
