--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -17,13 +17,13 @@
                 </wm-composite>
                 <wm-button type="submit" caption="New User" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_Register.invoke()"></wm-button>
             </wm-login>
-            <wm-container name="container1" height="220px"></wm-container>
+            <wm-container name="container1" height="200px"></wm-container>
             <wm-container name="container2" backgroundcolor="#103ee8">
                 <wm-layoutgrid name="layoutgrid1">
                     <wm-gridrow name="gridrow1">
                         <wm-gridcolumn columnwidth="5" name="gridcolumn1"></wm-gridcolumn>
                         <wm-gridcolumn columnwidth="7" name="gridcolumn2" horizontalalign="right">
-                            <wm-anchor margin="unset 0.5em" name="anchor1" caption="Powered by: Crowe Mackay LLP" color="yellow" backgroundcolor="#103ee8" fontsize="9" textalign="right" hyperlink="www.crowemackay.ca"></wm-anchor>
+                            <wm-anchor margin="unset 0.5em" name="anchor1" caption="Crowe Mackay LLP" color="yellow" backgroundcolor="#103ee8" fontsize="9" textalign="right" hyperlink="www.crowemackay.ca"></wm-anchor>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow2"></wm-gridrow>
