Fixed issues after go-live New files added - [SignUp] Files modified - [EventDetails,EventsList,Login,Register,VCADB_users,securityService,webapp,project-security.xml,pages-config.json]

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,9 @@
     <!--fav icon-->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="//dh2dw20653ig1.cloudfront.net/studio-app/9.4.0.1.5546/wmmobile/styles/css/wm-style.css">
-    <!-- theme --><link rel="stylesheet" href="themes/blue-enterprise/android/style.css" theme="wmtheme"/><!-- /theme -->
+    <!-- theme -->
+    <link rel="stylesheet" href="themes/blue-enterprise/android/style.css" theme="wmtheme" />
+    <!-- /theme -->
     <link rel="stylesheet" href="app.css">
 </head>
 
@@ -26,7 +28,7 @@
     <div id="wm-common-content"></div>
     <wm-spinner name="globalspinner" classname="global-spinner" caption=""></wm-spinner>
     <toaster-container toaster-options="{'limit': 1,'time-out': 2000, 'position-class': 'toast-bottom-right'}"></toaster-container>
-    <wm-network-info-toaster></wm-network-info-toaster>
+    <!--<wm-network-info-toaster></wm-network-info-toaster>-->
 </body>
 
 </html>
