--- a/src/main/webapp/pages/EventsList/EventsList.html
+++ b/src/main/webapp/pages/EventsList/EventsList.html
@@ -7,9 +7,8 @@
             <wm-container name="container1">
                 <wm-list listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" name="executeEventsListList1" dataset="bind:Variables.VCADB_usersExecuteEventsList.dataSet" navigation="Pager">
                     <wm-listtemplate layout="inline" name="listtemplate1">
-                        <wm-container class="media-left" name="container2"></wm-container>
                         <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3" on-tap="Actions.goToPage_EventDetails.invoke()">
-                            <wm-label name="Name" class="p media-heading" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.eventname" fontsize="1.143" fontunit="em"></wm-label>
+                            <wm-label name="Name" class="p media-heading" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.eventname" fontsize="1.143" fontunit="em" width="100%"></wm-label>
                             <wm-label name="JobTitle" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.venuename" class="p media-heading" fontsize="1.1" fontunit="em"></wm-label>
                             <wm-composite name="composite1" fontsize="8">
                                 <wm-container class="col-xs-8" name="container5" width="100%">
