--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -9,13 +9,13 @@
                 </wm-composite>
                 <wm-composite name="passwordField">
                     <wm-label caption="Password" name="passwordLabel" class="control-label"></wm-label>
-                    <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="default"></wm-text>
+                    <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="blur"></wm-text>
                 </wm-composite>
-                <wm-button type="submit" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()" on-blur="Actions.loginAction.invoke()"></wm-button>
+                <wm-button type="button" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()" on-doubletap="Actions.loginAction.invoke()"></wm-button>
                 <wm-composite name="remembermeField" class="app-login-rememberme">
                     <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                 </wm-composite>
-                <wm-button type="submit" caption="New User" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_Register.invoke()"></wm-button>
+                <wm-button type="button" caption="New User" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_SignUp.invoke()"></wm-button>
             </wm-login>
             <wm-container name="container1" height="200px"></wm-container>
             <wm-container name="container2" backgroundcolor="#103ee8">
@@ -23,7 +23,7 @@
                     <wm-gridrow name="gridrow1">
                         <wm-gridcolumn columnwidth="5" name="gridcolumn1"></wm-gridcolumn>
                         <wm-gridcolumn columnwidth="7" name="gridcolumn2" horizontalalign="right">
-                            <wm-anchor margin="unset 0.5em" name="anchor1" caption="Crowe Mackay LLP" color="yellow" backgroundcolor="#103ee8" fontsize="9" textalign="right" hyperlink="www.crowemackay.ca"></wm-anchor>
+                            <wm-anchor margin="unset 0.5em" name="anchor1" caption="Crowe Mackay LLP" color="yellow" backgroundcolor="#103ee8" fontsize="9" textalign="right" hyperlink="https://crowemackay.ca/services/information-technology/"></wm-anchor>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow2"></wm-gridrow>
