Changed password reset message Files modified - [ForgotPassword,Login,SignUp,index.html]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -13,7 +13,7 @@
                         <wm-composite name="composite4">
                             <wm-label class="col-xs-4 control-label" name="label4" caption="Email"></wm-label>
                             <wm-container class="col-xs-8" name="container7">
-                                <wm-text name="emailaddress" type="email" placeholder="Enter email address" fontunit="px" required="true" autofocus="true" autocomplete="false" on-blur="Variables.emailexists.invoke();emailaddressBlur($event, $scope)"></wm-text>
+                                <wm-text name="emailaddress" type="email" placeholder="Enter email address" fontunit="px" required="true" autofocus="true" autocomplete="false" on-blur="emailaddressBlur($event, $scope)"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
