--- a/src/main/webapp/pages/SignUp/SignUp.html
+++ b/src/main/webapp/pages/SignUp/SignUp.html
@@ -1,4 +1,5 @@
 <wm-page data-ng-controller="SignUpPageController" name="page1">
+    <wm-mobile-navbar name="mobile_navbar1" title="Sign Up"></wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-container name="container1"></wm-container>
