Fixed issue with update password Files modified - [ForgotPassword,Login,config.xml]

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -22,7 +22,7 @@
                 <wm-button type="button" caption="New User" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_SignUp.invoke()"></wm-button>
             </wm-login>
             <wm-container name="container1" height="20%">
-                <wm-label padding="unset 0.5em" name="label3" caption="bind:Variables.md5Check.dataSet.value" show="true"></wm-label>
+                <wm-label padding="unset 0.5em" name="label3" caption="bind:Variables.md5Check.dataSet.value" show="false"></wm-label>
             </wm-container>
             <wm-container name="container2" height="10%">
                 <wm-layoutgrid name="layoutgrid1">
