Change Password Files modified - [ForgotPassword,app.variables.json]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -22,7 +22,7 @@
                 <wm-gridrow name="gridrow18" padding="10px unset unset unset">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn26"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="8" name="gridcolumn31">
-                        <wm-button class="btn-default" caption="Request Password Reset" type="button" margin="unset 0.5em" name="button3" width="100%" on-tap="Variables.sendEmailPasswordReset.invoke();button3Tap($event, $scope);Actions.Successpassword.invoke();Actions.goToPage_Main.invoke();Variables.updateUserPassword.invoke()"></wm-button>
+                        <wm-button class="btn-default" caption="Request Password Reset" type="button" margin="unset 0.5em" name="button3" width="100%" on-tap="Variables.sendEmailPasswordReset.invoke();button3Tap($event, $scope);Actions.Successpassword.invoke();Variables.updateUserPassword.invoke();Actions.goToPage_Main.invoke()"></wm-button>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="2" name="gridcolumn27"></wm-gridcolumn>
                 </wm-gridrow>
