Finished Forgot Password Files modified - [EditVenues,EventsList,ForgotPassword,Main,Map,SignUp,VCADB_users,securityService,FacebookOAuth,GoogleOAuth,googlemaps,project-security.xml,app.variables.json,pages-config.json] Removed files - [Register]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -4,28 +4,9 @@
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-container name="container1"></wm-container>
             <wm-layoutgrid name="layoutgrid3">
-                <wm-gridrow name="gridrow16">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn23" height="70px"></wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow17">
-                    <wm-gridcolumn columnwidth="2" name="gridcolumn24"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="8" name="gridcolumn30">
-                        <wm-composite name="composite4">
-                            <wm-label class="col-xs-4 control-label" name="label4" caption="Email"></wm-label>
-                            <wm-container class="col-xs-8" name="container7">
-                                <wm-text name="emailaddress" type="email" placeholder="Enter email address" fontunit="px" required="true" autofocus="true" autocomplete="false" on-blur="emailaddressBlur($event, $scope)"></wm-text>
-                            </wm-container>
-                        </wm-composite>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="2" name="gridcolumn25"></wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow18" padding="10px unset unset unset">
-                    <wm-gridcolumn columnwidth="2" name="gridcolumn26"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="8" name="gridcolumn31">
-                        <wm-button class="btn-default" caption="Request Password Reset" type="button" margin="unset 0.5em" name="button3" width="100%" on-tap="Variables.sendEmailPasswordReset.invoke();button3Tap($event, $scope);Actions.Successpassword.invoke();Variables.updateUserPassword.invoke();Actions.goToPage_Main.invoke()"></wm-button>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="2" name="gridcolumn27"></wm-gridcolumn>
-                </wm-gridrow>
+                <wm-gridrow name="gridrow16"></wm-gridrow>
+                <wm-gridrow name="gridrow17"></wm-gridrow>
+                <wm-gridrow name="gridrow18" padding="10px unset unset unset"></wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn29" height="70px">
                         <wm-label padding="unset 0.5em" name="label5" caption="ABCDEFGHIJKLMNOPQRSTUVWXYZ" show="false"></wm-label>
@@ -35,6 +16,35 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
+            <wm-container name="container3"></wm-container>
+            <wm-layoutgrid name="layoutgrid3_1">
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn8"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="10" name="gridcolumn4">
+                        <wm-composite name="composite2" horizontalalign="center">
+                            <wm-label class="col-xs-4 control-label" name="label5_2" caption="Email Address"></wm-label>
+                            <wm-container class="col-xs-8" name="container3_1">
+                                <wm-text name="text1" on-blur="text1Blur($event, $scope)"></wm-text>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn5"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn9"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="10" name="gridcolumn6"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn7"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn8_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="10" name="gridcolumn9_1" horizontalalign="center">
+                        <wm-button class="btn-default" caption="Request Password Reset" type="button" margin="unset 0.5em" name="button4" on-tap="button4Tap($event, $scope);Actions.passwordSuccess.invoke();Variables.sendEmailPasswordReset.invoke();Actions.goToPage_Main.invoke()"
+                            width="100%"></wm-button>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn10"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-container name="container4"></wm-container>
         </wm-page-content>
     </wm-content>
 </wm-page>
