--- a/src/main/webapp/pages/EditVenues/EditVenues.html
+++ b/src/main/webapp/pages/EditVenues/EditVenues.html
@@ -14,7 +14,7 @@
                     </wm-container>
                     <wm-container class="media-right media-top" width="12%" name="container9" horizontalalign="right">
                         <wm-buttongroup name="buttongroup1">
-                            <wm-button class="btn-transparent edit-list-item" caption="" name="button1" iconclass="wi wi-pencil fa-2x" margin="unset 0.2em unset unset"></wm-button>
+                            <wm-button class="btn-transparent edit-list-item" caption="" name="button1" iconclass="wi wi-pencil fa-2x" margin="unset 0.2em unset unset" padding="unset unset 10px unset"></wm-button>
                             <wm-button class="btn-transparent delete-list-item" caption="" name="button2" iconclass="wi wi-trash fa-2x"></wm-button>
                         </wm-buttongroup>
                     </wm-container>
