--- a/src/main/webapp/pages/EventsList/EventsList.html
+++ b/src/main/webapp/pages/EventsList/EventsList.html
@@ -9,7 +9,7 @@
                     <wm-listtemplate layout="inline" name="listtemplate1">
                         <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3" on-tap="Actions.goToPage_EventDetails.invoke()">
                             <wm-label name="Name" class="p media-heading" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.eventname" fontsize="1.143" fontunit="em" width="100%"></wm-label>
-                            <wm-label name="JobTitle" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.venuename" class="p media-heading" fontsize="1.1" fontunit="em"></wm-label>
+                            <wm-label name="Venue" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.venuename" class="p media-heading" fontsize="1.1" fontunit="em"></wm-label>
                             <wm-composite name="composite1" fontsize="8">
                                 <wm-container class="col-xs-8" name="container5" width="100%">
                                     <wm-label padding="unset 0.5em" name="label3" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventdate + ' ' + Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventtime | toDate: 'dd-MMM-yyyy hh:mm a'"
