Fixed issues with Android details screen New files added - [icons,VCSS480800.png,vcss800480.png,vcss320200.png,vcss480320.png,vcss1280720.png,vcss1600960.png,VCSS200320.png,VCSS320480.png,VCSS7201280.png,VCSS9601600.png] Files modified - [ChangePassword,EventDetails,VCADB_users,securityService,project-security.xml,config.xml]

--- a/src/main/webapp/pages/ChangePassword/ChangePassword.html
+++ b/src/main/webapp/pages/ChangePassword/ChangePassword.html
@@ -13,7 +13,7 @@
                         <wm-composite name="composite1">
                             <wm-label class="col-xs-4 control-label" name="label1" caption="Old Password" width="30%"></wm-label>
                             <wm-container class="col-xs-8" name="container2">
-                                <wm-text name="oldPassword" placeholder="" type="password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$"></wm-text>
+                                <wm-text name="oldPassword" placeholder="" type="password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$" on-blur="Variables.getOldPassword_var.invoke();oldPasswordBlur($event, $scope)"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -23,7 +23,7 @@
                         <wm-composite name="composite3">
                             <wm-label class="col-xs-4 control-label" name="label3" caption="New Password" width="30%"></wm-label>
                             <wm-container class="col-xs-8" name="container4">
-                                <wm-text name="newPassword" placeholder="" type="password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$"></wm-text>
+                                <wm-text name="newPassword" placeholder="" type="password" regexp="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&amp;*()]*$" on-blur="Variables.getOldPassword_var.invoke()"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
