--- a/src/main/webapp/pages/EventDetails/EventDetails.html
+++ b/src/main/webapp/pages/EventDetails/EventDetails.html
@@ -7,7 +7,7 @@
             <wm-container name="container1"></wm-container>
             <wm-list listclass="list-group" template="true" itemsperrow="xs-1 sm-2 md-2 lg-3" class="media list-card" name="executeAttendeeEventDetailsList1" dataset="bind:Variables.VCADB_usersExecuteAttendeeEventDetails.dataSet" navigation="Basic">
                 <wm-listtemplate layout="media" name="listtemplate1">
-                    <wm-container name="container2" height="400px">
+                    <wm-container name="container2">
                         <wm-container class="media-left" padding="unset unset unset 0.5em" name="container3"></wm-container>
                         <wm-container class="media-body" name="container4">
                             <wm-label class="h4" caption="bind:Variables.VCADB_usersExecuteAttendeeEventDetails.dataSet.eventname" name="Name" margin="0px unset" whitespace="nowrap" width="98%"></wm-label>
@@ -46,6 +46,7 @@
                                                 </wm-gridrow>
                                                 <wm-gridrow name="gridrow6"></wm-gridrow>
                                             </wm-layoutgrid>
+                                            <wm-container name="container5"></wm-container>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
