deploy Nov15th 2018 10:37AM Files modified - [Login,config.xml]

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -14,7 +14,7 @@
                 <wm-container height="25px" name="container3">
                     <wm-anchor margin="unset 0.5em" name="anchor2" width="100%" textalign="right" caption="Forgot Password" fontsize="10" on-tap="Actions.goToPage_ForgotPassword.invoke()"></wm-anchor>
                 </wm-container>
-                <wm-button type="submit" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()" on-doubletap="Actions.loginAction.invoke()"></wm-button>
+                <wm-button type="button" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()" on-doubletap="Actions.loginAction.invoke()"></wm-button>
                 <wm-composite name="remembermeField" class="app-login-rememberme">
                     <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                 </wm-composite>
