--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -9,12 +9,12 @@
                 </wm-composite>
                 <wm-composite name="passwordField">
                     <wm-label caption="Password" name="passwordLabel" class="control-label"></wm-label>
-                    <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="blur" updatedelay="100"></wm-text>
+                    <wm-text type="password" name="passwordtext" placeholder="Enter password" class="app-login-password" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="blur" updatedelay="100" on-blur="passwordtextBlur($event, $scope)"></wm-text>
                 </wm-composite>
                 <wm-container height="25px" name="container3">
                     <wm-anchor margin="unset 0.5em" name="anchor2" width="100%" textalign="right" caption="Forgot Password" fontsize="10" on-tap="Actions.goToPage_ForgotPassword.invoke()"></wm-anchor>
                 </wm-container>
-                <wm-button type="button" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()" on-doubletap="Actions.loginAction.invoke()"></wm-button>
+                <wm-button type="button" caption="Sign in" width="100%" class="app-login-button btn-primary" name="loginButton" on-tap="Actions.loginAction.invoke()"></wm-button>
                 <wm-composite name="remembermeField" class="app-login-rememberme">
                     <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                 </wm-composite>
@@ -23,6 +23,7 @@
             </wm-login>
             <wm-container name="container1" height="20%">
                 <wm-label padding="unset 0.5em" name="label3" caption="bind:Variables.md5Check.dataSet.value" show="false"></wm-label>
+                <wm-label padding="unset 0.5em" name="label4" width="100%" caption="bind:Variables.md5Check.dataSet.value" show="false"></wm-label>
             </wm-container>
             <wm-container name="container2" height="10%">
                 <wm-layoutgrid name="layoutgrid1">
